@@ -1,27 +1,26 @@
 // Bug.h					SimpleBug
 
-#import <swarmobject/SwarmObject.h>
+#import <objectbase/SwarmObject.h>
 #import <space.h>
 #import "FoodSpace.h"
 
-@interface Bug: SwarmObject {
-
+@interface Bug: SwarmObject
+{
   int xPos, yPos;
   int worldXSize, worldYSize;
   
-  Grid2d * world;
+  Grid2d *world;
   id food;
 
   int haveEaten;
-
 }
 
--setWorld: (id) w Food: (id) f;
--createEnd;
+- setWorld: w Food: f;
+- createEnd;
 
--setX: (int) x Y: (int) y;
--step;
--report;
+- setX: (int)x Y: (int)y;
+- step;
+- report;
 
 @end
 
